cloud_storage: lift client pool from client header
This commit lifts the client pool to its own translation header
and cleans up the includes in 'client.h'.

--- a/src/v/s3/CMakeLists.txt
+++ b/src/v/s3/CMakeLists.txt
@@ -3,8 +3,9 @@ v_cc_library(
   NAME s3
   SRCS
     client.cc
-    error.cc
+    client_pool.cc
     client_probe.cc
+    error.cc
   DEPS
     Seastar::seastar
     v::bytes
