cloud_roles: add ABS credentials applier
This commit introduces a new 'apply_credentials' implementation for ABS
Shared Key auth. The new credentials applier also gets wired into the
remote.

--- a/src/v/cloud_roles/CMakeLists.txt
+++ b/src/v/cloud_roles/CMakeLists.txt
@@ -1,6 +1,7 @@
 v_cc_library(
     NAME cloud_roles
     SRCS
+    apply_abs_credentials.cc
     apply_aws_credentials.cc
     apply_credentials.cc
     apply_gcp_credentials.cc
